[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["midhilesh <chintu.midhilesh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
requests = "^2.31.0"
pandas = "^2.2.0"
pyarrow = "^16.0.0"
tqdm = "^4.66.2"
plotly = "^5.22.0"
scikit-learn = "^1.4.2"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
optuna = "^3.6.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
